Add homepage, list weapons.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>COD:M Camo Tracker</h1>
-<div>Start of new camo tracker app</div>
+<div class="header">
+  <h1>COD:M Camo Tracker</h1>
+</div>
+<div class="main-container">
+  <router-outlet></router-outlet>
+</div>
