Reduce slider area

--- a/src/app/camo-entry/camo-entry.component.scss
+++ b/src/app/camo-entry/camo-entry.component.scss
@@ -19,6 +19,16 @@
       padding: 15px 0;
     }
 
+    .camo-title {
+      margin-bottom: 10px;
+    }
+
+    .slider {
+      height: 16px;
+      margin-left: -8px;
+      overflow: hidden;
+    }
+
     .camo-progress {
       width: 80px;
       margin-left: 15px;
