--- a/src/app/camo-card/camo-card.component.html
+++ b/src/app/camo-card/camo-card.component.html
@@ -1,10 +1,10 @@
 <div class="card">
-    <div class="progress-number">
-      {{ progressData[weapon.id].current }} /
-      {{ progressData[weapon.id].total }}
-    </div>
-    <div class="title">{{ weapon.name }}</div>
+  <div class="progress-number">
+    {{ progress[weapon.id].current }} /
+    {{ progress[weapon.id].total }}
   </div>
-  <div class="progress-bar">
-    <div class="bar" [style.width]="progressData[weapon.id].bar"></div>
-  </div>
+  <div class="title">{{ weapon.name }}</div>
+</div>
+<div class="progress-bar">
+  <div class="bar" [style.width]="progress[weapon.id].bar"></div>
+</div>
