--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,15 +1,8 @@
 <div class="container">
-  <div class="card-container" *ngFor="let Weapon of weapons">
-    <app-camo-card [weapon]='weapons' [progress]='progressData'></app-camo-card>
-    <div class="card">
-      <div class="progress-number">
-        {{ progressData[Weapon.id].current }} /
-        {{ progressData[Weapon.id].total }}
-      </div>
-      <div class="title">{{ Weapon.name }}</div>
-    </div>
-    <div class="progress-bar">
-      <div class="bar" [style.width]="progressData[Weapon.id].bar"></div>
-    </div>
+  <div class="card-container" *ngFor="let weapon of weapons">
+    <app-camo-card
+      [weapon]="weapon"
+      [progress]="progressData[weapon.id]"
+    ></app-camo-card>
   </div>
 </div>
