--- a/src/app/camo-card/camo-card.component.html
+++ b/src/app/camo-card/camo-card.component.html
@@ -3,7 +3,7 @@
     {{ progress.current }} /
     {{ progress.total }}
   </div>
-  <div class="title">{{ weapon.id }}</div>
+  <div class="title">{{ weapon.name }}</div>
 </div>
 <div class="progress-bar">
   <div class="bar" [style.width]="progress.bar"></div>
