broke progress bar

--- a/src/app/camo-card/camo-card.component.html
+++ b/src/app/camo-card/camo-card.component.html
@@ -1,3 +1,7 @@
 <div class="card">
+  <div class="progress-number">
+    {{ progress.current }} /
+    {{ progress.total }}
+  </div>
   <div class="title">{{ weapon.name }}</div>
 </div>
