--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,11 +1,12 @@
 <div class="container">
-  <div class="card-container" *ngFor="let Weapon of weapons">
+  <div class="card-container" *ngFor="let weapon of weapons">
     <app-camo-card
-      [weapon]="Weapon"
-      [progress]="progressData[Weapon.id]"
+      [weapon]="weapon"
+      [progress]="progressData[weapon.id]"
     ></app-camo-card>
-    <div class="progress-bar">
-      <div class="bar" [style.width]="progressData.bar"></div>
-    </div>
+    <app-progress-bar
+      [value]="progressData[weapon.id].current"
+      [max]="progressData[weapon.id].total"
+    ></app-progress-bar>
   </div>
 </div>
