--- a/src/app/progress-bar/progress-bar.component.html
+++ b/src/app/progress-bar/progress-bar.component.html
@@ -1,3 +1,3 @@
 <div class="progress-bar">
-  <div class="bar" [style.width]="progress.bar"></div>
+  <div class="bar" [style.width]="progressInPercent"></div>
 </div>
